style.css
body{
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    
    /*width*/
    width: 90vw;
    max-width: 1000px;
    -min-width: 600px;

    /*center*/
    margin:auto;

    /* background */
    -background-color: lightgray;
}

#header{
    /* guinness truck */
    background-image: 
    linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.0)),
    url("https://lh3.googleusercontent.com/pw/ABLVV8639X7tRwcFSY8Df4hgPBB9IMZVsdVXHN_tAdjR48yojSEgO0m2JMa8oSnFqV2-_DbXxP4aSDd_eVJvr5v7qr8gz1hWo5cdANK_cSddqe-aEuMYeQzSONditmeT4Y6MszWt8hiCaZxOjBtaBmI64KJR=w1364-h869-s-no-gm?authuser=0");
    
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    position: relative;

    height: 325px;
}

#siteID{
    -background-color: rgb(99, 137, 99);
    max-height: 225px;

    margin-top: 25px; 
    margin-bottom: 0px;
    line-height: 70px;
    padding-top: 15px;
    padding-bottom: 15px;

    

    /* text */
    text-align: center;
    font-size: 70px;
    color:  rgb(4, 55, 4);
    
    -text-shadow: 13px 3px 1px black;

    transition: .8s;
}

#hotbar{
    -background-color: rgb(105, 115, 121);

    position: absolute;
    bottom: 0;
    -left: 0;

    height: 100px;
    width: 100%;
    -margin-top: 15px; 
    -margin-bottom: 15px;
    -line-height: 30px;

    text-align: center;
}

.topButton{
    font-size: 30px;
    line-height: 30px;
    height: 50px;

    /*spacing */
    max-width: 40%;

    /* vertically centered */
    margin: 10px;
    position: relative;
    transform: translateY(20px);
}

#feed{
    display: flex;

    /* old -> new */
    -flex-direction: column;

    /*new -> old */
    flex-direction: column-reverse;
}

.postBox{
    background-color: rgb(194, 216, 175);
    
    /*border*/
    -border-radius: 5px;
    -border-color: lightgray;
    -border-style: solid;
    -border-width: 1px;

    /*space within the post */
    padding-top: 20px;
    padding-left: 25px;
    padding-right: 25px;
    padding-bottom: 10px;

    /*space between posts */
    margin-top: 45px;
    -margin-bottom: 15px;

    /* shadow */
    box-shadow: 3px 3px 3px rgb(154, 153, 153);

    transition: .4s;
}

/*Title of journal entry */
    .title{
        -background-color: red;
        font-size: 40px;
        margin-top: 0px; 
        margin-bottom: 0px;
        line-height: 50px;

        transition: 1s;
    }

    .date{
        -background-color: pink;
        font-size: 30px;
        margin-top: 0px; 
        margin-bottom: 30px;

        transition: 0.9s;
    }

/* My journal entry writing */
.content{
    -background-color: pink;
    font-size: 18px;
    margin-top: 0px;
    margin-bottom: 0px;

    transition: 1s;
}

.text{
    -background-color: rosybrown;
    -margin-top: 25px;
    margin-bottom: 30px;
}
/* Image in journal entry */
    .imgBlob{
        -background-color: yellowgreen;
        -margin-top: 15px;
        margin-bottom: 30px;
    }
    img{
        -background-color: purple;

        /*center*/
        display: block;
        margin-left: auto;
        margin-right: auto;

        width: 600px;
        max-width: 100%;
        height: auto;

        transition: 2s;
    }
    .caption{
        -background-color: brown;
        font-size: 17px;
        text-align: center;

        /*make caption close to img above */

        margin-bottom: 10px;
    }


#fullScreen{
    -height: 90%;
    -width: 90%;

    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    -position: relative;
}


.observation{
    background-image: 
    linear-gradient(to bottom, rgba(255, 218, 144, .9), rgba(255, 229, 178, 0.7)),
    url("https://i.etsystatic.com/21850294/r/il/a09e2d/3492306539/il_570xN.3492306539_4hic.jpg");

    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    position: relative;

    min-height: 150px;
    width: 90%;

    
    margin-left: auto;
    margin-right: auto;
    margin-top: 0px;
    margin-bottom: 30px;

    border-radius: 8px;

}

.obHeading{
    text-align: center;
    font-size: 30px;

    background-color: antiquewhite;
    padding: 5px;

    border-radius: 8px 8px 0px 0px;
    margin-bottom: 0px;

    transition: .5s;
}

.obText{
    font-size: 20px;
    padding: 15px;
    margin-top: 0px;
    -background-color: rgba(255, 166, 0, 0.342);

    -position: absolute;
    -top:0;

    transition: .8s;
}


.spotify{
    -border-radius: 12px;
    border-width: 0px;
    width:90%;

    /*center*/
    display:block;
    margin-left: auto;
    margin-right: auto;

    height: 152px;
    position: relative;
    
    font-size: 30px;
    -background-color: antiquewhite;
    padding: 0px;

    margin-bottom: 30px;   
}

